--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	<h1>Hello world! </h1>
+	<h1>Hello world!</h1>
+	<div class="body__block">
+		<ul class="body__list">
+			<li class="body__item">Мясо</li>
+			<li class="body__item">Молоко</li>
+			<li class="body__item">Вода</li>
+			<li class="body__item">Гречка</li>
+		</ul>
+	</div>
 </body>
 </html>
