--- a/index.html
+++ b/index.html
@@ -1,21 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Document</title>
+	<link rel="stylesheet" href="css/normalize.css">
+	<link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-	<h1>Hello world!</h1>
+	<h1>Hello world! </h1>
 	<div class="body__block">
 		<ul class="body__list">
-			<li class="body__item">Мясо</li>
-			<li class="body__item">Молоко</li>
-			<li class="body__item">Вода</li>
-			<li class="body__item">Гречка</li>
+			<li class="body__item"></li>
+			<li class="body__item"></li>
+			<li class="body__item"></li>
+			<li class="body__item"></li>
 		</ul>
 	</div>
 </body>
+
 </html>
